platform-lab-global-manifest/apps/prometheus/overlays/prd/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
spec:
  hosts:
  - "grafana.paulojuniosre.com.br"
  gateways:
    - istio-system/global-gateway
  http:
    - match:
        - uri:
            prefix: "/" # todas as requisições
      route:
        - destination:
            host: kube-prometheus-stack-grafana
            port:
              number: 80
